fix compound corrections; commit test-script; fix flow behavior of uncertainties; add minimalDemo.py example; update README

--- a/scripts/JERC2JSON/JSONs/2017_JERC_All.html
+++ b/scripts/JERC2JSON/JSONs/2017_JERC_All.html
@@ -48,6 +48,29 @@ Summer19UL17_RunF_V5_DATA_AK4PFchs.json.gz Summer19UL17_RunF_V5_DATA_AK8PFPuppi.
 <span class="r5">│   </span>│ <span class="r3">correction</span> (real) │                                                                           
 <span class="r5">│   </span>│ <span class="r4">No description</span>    │                                                                           
 <span class="r5">│   </span>╰───────────────────╯                                                                           
+<span class="r5">├── </span>📈 <span class="r3">Summer19UL17_JRV3_MC_EtaResolution_AK4PFchs</span> (v1)                                             
+<span class="r5">│   </span>EtaResolution for AK4PFchs created from Summer19UL17_JRV3_MC by using                           
+<span class="r5">│   </span>https://github.com/cms-jet/JECDatabase/tree/master/scripts/JE[R/C]2JSON.py                      
+<span class="r5">│   </span>Node counts: <span class="r3">Binning</span>: 27, <span class="r3">Formula</span>: 183                                                          
+<span class="r5">│   </span>╭───────────────────────────────────── ▶ input ─────────────────────────────────────╮           
+<span class="r5">│   </span>│ <span class="r3">JetEta</span> (real)                                                                     │           
+<span class="r5">│   </span>│ pseudorapidity of the jet                                                         │           
+<span class="r5">│   </span>│ Range: [-4.7, 4.7), overflow ok                                                   │           
+<span class="r5">│   </span>╰───────────────────────────────────────────────────────────────────────────────────╯           
+<span class="r5">│   </span>╭───────────────────────────────────── ▶ input ─────────────────────────────────────╮           
+<span class="r5">│   </span>│ <span class="r3">JetPt</span> (real)                                                                      │           
+<span class="r5">│   </span>│ pT of the jet before specific correction (for JER: after all corrections applied) │           
+<span class="r5">│   </span>│ Range: [-inf, inf), overflow ok                                                   │           
+<span class="r5">│   </span>╰───────────────────────────────────────────────────────────────────────────────────╯           
+<span class="r5">│   </span>╭───────────────────────────────────── ▶ input ─────────────────────────────────────╮           
+<span class="r5">│   </span>│ <span class="r3">Rho</span> (real)                                                                        │           
+<span class="r5">│   </span>│ energy density rho (as measure of PU)                                             │           
+<span class="r5">│   </span>│ Range: [0.0, 90.0), overflow ok                                                   │           
+<span class="r5">│   </span>╰───────────────────────────────────────────────────────────────────────────────────╯           
+<span class="r5">│   </span>╭──── ◀ output ─────╮                                                                           
+<span class="r5">│   </span>│ <span class="r3">correction</span> (real) │                                                                           
+<span class="r5">│   </span>│ <span class="r4">No description</span>    │                                                                           
+<span class="r5">│   </span>╰───────────────────╯                                                                           
 <span class="r5">├── </span>📈 <span class="r3">Summer19UL17_JRV3_MC_PhiResolution_AK4PFchs</span> (v1)                                             
 <span class="r5">│   </span>PhiResolution for AK4PFchs created from Summer19UL17_JRV3_MC by using                           
 <span class="r5">│   </span>https://github.com/cms-jet/JECDatabase/tree/master/scripts/JE[R/C]2JSON.py                      
@@ -86,6 +109,29 @@ Summer19UL17_RunF_V5_DATA_AK4PFchs.json.gz Summer19UL17_RunF_V5_DATA_AK8PFPuppi.
 <span class="r5">│   </span>╰───────────────────╯                                                                           
 <span class="r5">├── </span>📈 <span class="r3">Summer19UL17_JRV3_MC_PtResolution_AK8PFPuppi</span> (v1)                                            
 <span class="r5">│   </span>PtResolution for AK8PFPuppi created from Summer19UL17_JRV3_MC by using                          
+<span class="r5">│   </span>https://github.com/cms-jet/JECDatabase/tree/master/scripts/JE[R/C]2JSON.py                      
+<span class="r5">│   </span>Node counts: <span class="r3">Binning</span>: 27, <span class="r3">Formula</span>: 183                                                          
+<span class="r5">│   </span>╭───────────────────────────────────── ▶ input ─────────────────────────────────────╮           
+<span class="r5">│   </span>│ <span class="r3">JetEta</span> (real)                                                                     │           
+<span class="r5">│   </span>│ pseudorapidity of the jet                                                         │           
+<span class="r5">│   </span>│ Range: [-4.7, 4.7), overflow ok                                                   │           
+<span class="r5">│   </span>╰───────────────────────────────────────────────────────────────────────────────────╯           
+<span class="r5">│   </span>╭───────────────────────────────────── ▶ input ─────────────────────────────────────╮           
+<span class="r5">│   </span>│ <span class="r3">JetPt</span> (real)                                                                      │           
+<span class="r5">│   </span>│ pT of the jet before specific correction (for JER: after all corrections applied) │           
+<span class="r5">│   </span>│ Range: [-inf, inf), overflow ok                                                   │           
+<span class="r5">│   </span>╰───────────────────────────────────────────────────────────────────────────────────╯           
+<span class="r5">│   </span>╭───────────────────────────────────── ▶ input ─────────────────────────────────────╮           
+<span class="r5">│   </span>│ <span class="r3">Rho</span> (real)                                                                        │           
+<span class="r5">│   </span>│ energy density rho (as measure of PU)                                             │           
+<span class="r5">│   </span>│ Range: [0.0, 90.0), overflow ok                                                   │           
+<span class="r5">│   </span>╰───────────────────────────────────────────────────────────────────────────────────╯           
+<span class="r5">│   </span>╭──── ◀ output ─────╮                                                                           
+<span class="r5">│   </span>│ <span class="r3">correction</span> (real) │                                                                           
+<span class="r5">│   </span>│ <span class="r4">No description</span>    │                                                                           
+<span class="r5">│   </span>╰───────────────────╯                                                                           
+<span class="r5">├── </span>📈 <span class="r3">Summer19UL17_JRV3_MC_EtaResolution_AK8PFPuppi</span> (v1)                                           
+<span class="r5">│   </span>EtaResolution for AK8PFPuppi created from Summer19UL17_JRV3_MC by using                         
 <span class="r5">│   </span>https://github.com/cms-jet/JECDatabase/tree/master/scripts/JE[R/C]2JSON.py                      
 <span class="r5">│   </span>Node counts: <span class="r3">Binning</span>: 27, <span class="r3">Formula</span>: 183                                                          
 <span class="r5">│   </span>╭───────────────────────────────────── ▶ input ─────────────────────────────────────╮           
